styles/projects.scss
@use "./variables" as *;

.work {
  @include flex;
  flex-flow: column wrap;
  padding-bottom: 30px;
  width: 100%;

  .header {
    margin: 30px auto;
    position: relative;

    &::after {
      @include pseudo(60%, 0, 50%, $main-color, -1);
    }

    &__title {
      text-transform: uppercase;
      font-size: 2.1rem;
      margin: 0;
    }
  }

  .tip {
    font-size: 0.8rem;
    margin-top: -20px;
  }

  .projects,
  .contributions {
    display: flex;
    flex-wrap: wrap;
    margin: 40px 0 30px 0;
    justify-items: center;
    justify-content: center;
    max-width: 1200px;

    .project,
    .contribution {
      flex: 0 1 auto;
      width: 75vw;
      max-width: 310px;
      height: 75vw;
      max-height: 310px;
      margin: 30px;
      position: relative;
      cursor: pointer;

      &::after,
      &::before {
        @include pseudo(100%, 0, 0, transparent, -5);
        transition: all 0.4s;
      }

      &:hover::after {
        background-color: rgba($main-color, 0.6);
        transform: translate(10px, -10px);
        transition: transform 0.4s;
      }

      &:hover::before {
        background-color: rgba($main-color, 0.4);
        transform: translate(20px, -20px);
        transition: transform 0.4s;
      }

      &:hover .project__description,
      &:hover .contribution__description {
        opacity: 1;
        transition: opacity 0.3s;
      }

      &__image {
        width: 100%;
        height: 100%;
      }

      &__description {
        @include pseudo(100%, 0, 0, $main-color, 2);
        height: 100%;
        display: grid;
        grid-template-columns: 1fr;
        align-items: center;
        opacity: 0;
        padding: 0 20px 10px 20px;
        transition: opacity 0.3s;

        &__title {
          text-align: center;
          font-size: 1.15rem;
          padding: 0 10px;
          border-left: 2px solid $primary-white;
          width: 100%;
        }

        &__text {
          padding: 0 20px;
          border-left: 2px solid $primary-white;
          line-height: 1.3rem;
          font-size: 0.95rem;
        }

        &__technologies {
          padding-left: 15px;
          border-left: 2px solid $primary-white;
          align-self: start;
          font-size: 0.95rem;
          width: 100%;
          display: none;

          ul {
            padding-left: 25px;
            margin: 0;
            margin-top: 8px;
            list-style-image: url("../images/list.png");

            li {
              margin: 4px 0;
              padding-left: 3px;
            }
          }
        }

        &__buttons {
          @include flex;
          flex-wrap: wrap;
          width: 100%;

          button {
            border: 0 none;
            background-color: $primary-white;
            width: 100px;
            height: 40px;
            border-radius: 5px;
            margin: 8px;
            border: 2px solid $primary-white;
            text-transform: uppercase;
            font-weight: bold;
            font-size: 0.8rem;
            cursor: pointer;
            transition: background-color 0.3s;

            &:hover {
              background-color: $main-color;
              transition: background-color 0.3s;
            }
          }
        }
      }
    }
  }

  .subheader {
    margin: auto;
    margin-top: 40px;
    position: relative;

    &::after {
      @include pseudo(60%, 0, -10%, $main-color, -1);
    }

    &__title {
      text-transform: uppercase;
      font-size: 2rem;
      margin: 0;
    }
  }
}

@media all and (min-width: 360px) {
  .work .projects .project {
    &__description {
      &__technologies {
        display: block;
      }
    }
  }
}

